add_executable( FILE_streambuf.test FILE_streambuf.test.cpp )
set( test_flags ${utility_compiler_flags} )
separate_arguments( test_flags_list UNIX_COMMAND "${test_flags}" )
foreach( flag IN LISTS test_flags_list )
    target_compile_options( FILE_streambuf.test PUBLIC ${flag} )
endforeach( flag )
set_target_properties( FILE_streambuf.test PROPERTIES LINK_FLAGS "${test_flags}" )
target_link_libraries( FILE_streambuf.test PUBLIC utility )
add_test( NAME FILE_streambuf COMMAND FILE_streambuf.test ) 
