add_executable( basic_FILE_streambuf.test FILE_streambuf.test.cpp )
set( test_flags ${utility_compiler_flags} )
separate_arguments( test_flags_list UNIX_COMMAND "${test_flags}" )
foreach( flag IN LISTS test_flags_list )
    target_compile_options( basic_FILE_streambuf.test PUBLIC ${flag} )
endforeach( flag )
set_target_properties( basic_FILE_streambuf.test PROPERTIES LINK_FLAGS "${test_flags}" )
target_link_libraries( basic_FILE_streambuf.test PUBLIC utility )
add_test( NAME basic_FILE_streambuf COMMAND basic_FILE_streambuf.test ) 
