add_executable( utility.stream.basic_FILE_streambuf.test FILE_streambuf.test.cpp )
set( test_flags ${utility_compiler_flags} )
separate_arguments( test_flags_list UNIX_COMMAND "${test_flags}" )
foreach( flag IN LISTS test_flags_list )
    target_compile_options( utility.stream.basic_FILE_streambuf.test PUBLIC ${flag} )
endforeach( flag )
set_target_properties( utility.stream.basic_FILE_streambuf.test PROPERTIES LINK_FLAGS "${test_flags}" )
target_link_libraries( utility.stream.basic_FILE_streambuf.test PUBLIC utility )
add_test( NAME utility.stream.basic_FILE_streambuf COMMAND utility.stream.basic_FILE_streambuf.test ) 
