add_executable( utility.stream.basic_RecordOrientedStream.test basic_RecordOrientedStream.test.cpp )
set( test_flags ${utility_compiler_flags} )
separate_arguments( test_flags_list UNIX_COMMAND "${test_flags}" )
foreach( flag IN LISTS test_flags_list )
    target_compile_options( utility.stream.basic_RecordOrientedStream.test PUBLIC ${flag} )
endforeach( flag )
set_target_properties( utility.stream.basic_RecordOrientedStream.test PROPERTIES LINK_FLAGS "${test_flags}" )
target_link_libraries( utility.stream.basic_RecordOrientedStream.test PUBLIC utility )
add_test( NAME utility.stream.basic_RecordOrientedStream COMMAND utility.stream.basic_RecordOrientedStream.test ) 
