add_executable( basic_TemporaryFileStream.test TemporaryFileStream.test.cpp )
set( test_flags ${utility_compiler_flags} )
separate_arguments( test_flags_list UNIX_COMMAND "${test_flags}" )
foreach( flag IN LISTS test_flags_list )
    target_compile_options( basic_TemporaryFileStream.test PUBLIC ${flag} )
endforeach( flag )
set_target_properties( basic_TemporaryFileStream.test PROPERTIES LINK_FLAGS "${test_flags}" )
target_link_libraries( basic_TemporaryFileStream.test PUBLIC utility )
add_test( NAME basic_TemporaryFileStream COMMAND basic_TemporaryFileStream.test ) 
